--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,47 @@
 /*  */
-html * p {
-  color: red;
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  min-height: 100vh;
+  background: burlywood;
+  padding: 20;
+}
+
+button {
+  min-width: 100px;
+  margin: 20px;
+  padding: 10px;
+}
+
+.main {
+  width: 100%;
+  max-width: 760px;
+  height: 350px;
+  background: cornflowerblue;
+  padding: 10px;
+  margin: 0 20px 20px;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 20px;
 }
