--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,36 @@
 /*  */
-html * p {
-   color: red;
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
+body {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 100%;
+   min-height: 100vh;
+   background: burlywood;
+   padding: 20;
+}
+button {
+   min-width: 100px;
+   margin: 20px;
+   padding: 10px;
+}
+
+.main {
+   width: 100%;
+   max-width: 760px;
+   height: 350px;
+   background: cornflowerblue;
+   padding: 10px;
+   margin: 0 20px 20px;
+}
+
+img {
+   width: 100px;
+   height: 100px;
+   object-fit: cover;
+   margin-right: 20px;
 }
