--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
-
+/*  */
 body {
   display: -webkit-box;
   display: -ms-flexbox;
