--- a/css/style.css
+++ b/css/style.css
@@ -2,25 +2,24 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 /*  */
 body {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-wrap: wrap;
   width: 100%;
   min-height: 100vh;
   background: burlywood;
   padding: 20;
+}
+
+.wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
 
 button {
