--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,13 @@ img {
      object-fit: cover;
   margin-right: 20px;
 }
+
+.out {
+  width: 200px;
+  border: 1px solid green;
+}
+
+.pad {
+  padding: 50%;
+  border: 1px solid red;
+}
